# GitInsurance-App

./: .pre-commit-config.yaml  README.md  pyproject.toml
git_insurance_app/: accident_analysis.py  policy.py
main/: claims.py  policy.py
