[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-insurance-app"
version = "0.1.0"
description = "Sandbox project for testing and learning"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "António Lourenço", email = "alourenco@ren.pt"}
]
dependencies = [
    "pandas >= 2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "pre-commit"
]

[tool.setuptools]
packages = ["git_insurance_app"]